Migrated from iLuma

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,20 @@
 cmake_minimum_required(VERSION 3.10)
-project(iLuma)
+project(nashi)
 
 set(CMAKE_CXX_STANDARD 17)
-set(ILUMA_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/app")
-set(ILUMA_USE_VULKAN OFF)
+set(NASHI_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/app")
+set(NASHI_USE_VULKAN OFF)
 set(SDL_STATIC ON CACHE BOOL "" FORCE)
 set(SDL_SHARED OFF CACHE BOOL "" FORCE)
 
-file(GLOB_RECURSE SOURCES "${ILUMA_ROOT}/src/*.cpp") 
-file(GLOB_RECURSE HEADERS "${ILUMA_ROOT}/src/headers/*.hpp" "${ILUMA_ROOT}/src/headers/*.h") 
-file(GLOB_RECURSE SHADERS "${ILUMA_ROOT}/src/shaders/*.frag" "${ILUMA_ROOT}/src/shaders/*.vert" "${ILUMA_ROOT}/src/shaders/*.comp")
+file(GLOB_RECURSE SOURCES "${NASHI_ROOT}/src/*.cpp") 
+file(GLOB_RECURSE HEADERS "${NASHI_ROOT}/src/headers/*.hpp" "${NASHI_ROOT}/src/headers/*.h") 
+file(GLOB_RECURSE SHADERS "${NASHI_ROOT}/src/shaders/*.frag" "${NASHI_ROOT}/src/shaders/*.vert" "${NASHI_ROOT}/src/shaders/*.comp")
 
-add_executable(iLuma ${SOURCES} ${SHADERS} ${HEADERS})
+add_executable(nashi ${SOURCES} ${SHADERS} ${HEADERS})
 
-source_group(TREE "${ILUMA_ROOT}/src/shaders" PREFIX "Shaders" FILES ${SHADERS})
-source_group(TREE "${ILUMA_ROOT}/src/headers" PREFIX "Headers" FILES ${HEADERS})
+source_group(TREE "${NASHI_ROOT}/src/shaders" PREFIX "Shaders" FILES ${SHADERS})
+source_group(TREE "${NASHI_ROOT}/src/headers" PREFIX "Headers" FILES ${HEADERS})
 
 find_package(glm)
 
@@ -33,21 +33,21 @@ if (WIN32)
 
   if (Vulkan_FOUND)
     message(STATUS "Vulkan headers & loader found.")
-    set(ILUMA_USE_VULKAN ON)
+    set(NASHI_USE_VULKAN ON)
     set(GLSLC_PATH "$ENV{VULKAN_SDK}/Bin/glslc.exe")
     if(NOT EXISTS ${GLSLC_PATH})
         message(FATAL_ERROR "glslc.exe not found at ${GLSLC_PATH}. Please check Vulkan SDK installation.")
     endif()
   else()
     message(WARNING "Vulkan loader NOT found. Disabling Vulkan support.")
-    set(ILUMA_USE_VULKAN OFF)
+    set(NASHI_USE_VULKAN OFF)
 
   endif()
 
 endif()
-target_include_directories(iLuma PRIVATE "${ILUMA_ROOT}/src/headers")
+target_include_directories(nashi PRIVATE "${NASHI_ROOT}/src/headers")
 
-if (NOT ILUMA_VR)
+if (NOT NASHI_VR)
  include(FetchContent)
 
   # Declare SDL3 as an external project
@@ -64,9 +64,9 @@ if (NOT ILUMA_VR)
 
 endif()
 
-if (ILUMA_USE_VULKAN)
-  target_link_libraries(iLuma PRIVATE Vulkan::Vulkan glm::glm ${MIDDLEWARE})
-  target_compile_definitions(iLuma PRIVATE ILUMA_USE_VULKAN)
+if (NASHI_USE_VULKAN)
+  target_link_libraries(nashi PRIVATE Vulkan::Vulkan glm::glm ${MIDDLEWARE})
+  target_compile_definitions(nashi PRIVATE NASHI_USE_VULKAN)
 
   set(SPIRV_DIR "${CMAKE_CURRENT_BINARY_DIR}/shaders")  # This includes config (Debug/Release)
 
@@ -86,10 +86,10 @@ if (ILUMA_USE_VULKAN)
   endforeach()
 
   add_custom_target(shaders ALL DEPENDS ${SPIRV_SHADERS})
-  add_dependencies(iLuma shaders)
+  add_dependencies(nashi shaders)
 
-  add_custom_command(TARGET iLuma POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -DSRC="${SPIRV_DIR}" -DDEST="$<TARGET_FILE_DIR:iLuma>"
+  add_custom_command(TARGET nashi POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -DSRC="${SPIRV_DIR}" -DDEST="$<TARGET_FILE_DIR:nashi>"
             -P "${CMAKE_SOURCE_DIR}/CopyShaders.cmake"
     COMMENT "Copying compiled SPIR-V shaders to binary directory"
   )
