Noticed Vulkan build error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ endif()
 # Sources, headers, shaders
 file(GLOB_RECURSE SOURCES "${NASHI_ROOT}/src/*.cpp")
 file(GLOB_RECURSE HEADERS "${NASHI_ROOT}/src/headers/*.hpp" "${NASHI_ROOT}/src/headers/*.h")
-file(GLOB_RECURSE SHADERS "${NASHI_ROOT}/src/shaders/*.frag" "${NASHI_ROOT}/src/shaders/*.vert" "${NASHI_ROOT}/src/shaders/*.comp")
+file(GLOB SHADERS "${NASHI_ROOT}/src/shaders/*.frag" "${NASHI_ROOT}/src/shaders/*.vert" "${NASHI_ROOT}/src/shaders/*.comp")
 
 add_executable(nashi ${SOURCES} ${SHADERS} ${HEADERS})
 
@@ -42,18 +42,18 @@ FetchContent_MakeAvailable(glm)
 # Vulkan support on Windows
 set(GLAD_INCLUDE_PATH "")
 if(WIN32)
-  # find_package(Vulkan)
-  # if(Vulkan_FOUND)
-  #   message(STATUS "Vulkan headers & loader found.")
-  #   set(NASHI_USE_VULKAN ON)
-  #   set(GLSLC_PATH "$ENV{VULKAN_SDK}/Bin/glslc.exe")
-  #   if(NOT EXISTS ${GLSLC_PATH})
-  #     message(FATAL_ERROR "glslc.exe not found at ${GLSLC_PATH}. Please check Vulkan SDK installation.")
-  #   endif()
-  # else()
-  #   message(WARNING "Vulkan loader NOT found. Disabling Vulkan support.")
-  #   set(NASHI_USE_VULKAN OFF)
-  # endif()
+  find_package(Vulkan)
+  if(Vulkan_FOUND)
+    message(STATUS "Vulkan headers & loader found.")
+    set(NASHI_USE_VULKAN ON)
+    set(GLSLC_PATH "$ENV{VULKAN_SDK}/Bin/glslc.exe")
+    if(NOT EXISTS ${GLSLC_PATH})
+      message(FATAL_ERROR "glslc.exe not found at ${GLSLC_PATH}. Please check Vulkan SDK installation.")
+    endif()
+  else()
+    message(WARNING "Vulkan loader NOT found. Disabling Vulkan support.")
+    set(NASHI_USE_VULKAN OFF)
+  endif()
 
   # find_package(OpenGL REQUIRED)
   # add_library(glad STATIC
@@ -63,8 +63,8 @@ if(WIN32)
   # set(GLAD_INCLUDE_PATH "${NASHI_ROOT}/vendor/glad/include")
   # message(STATUS "Glad include path: ${NASHI_ROOT}/vendor/glad/include")
   
-  set(NASHI_USE_DIRECT3D12 ON)
-  set(DXC_PATH dxc)
+  # set(NASHI_USE_DIRECT3D12 ON)
+  # set(DXC_PATH dxc)
 endif()
 
 # Handle Release flags and definitions for multi-config and single-config
